# md-optimiser

./: .ccls  .gitignore  .golangci.json  Dockerfile.build-linux-arm64-so  Dockerfile.build-linux-so  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  Makefile  README.md  go.mod  liboptimiser.dylib  loader.go  optimiser.go  optimiser_test.go  reproducer_test.go
cpp/: .optimiser.cpp.swp  CMakeLists.txt  new_main_function.cpp  optimiser.cpp  optimiser.hpp
cpp/.ccls-cache/@@Users@richarddraycott@git@md-optimiser@cpp/: @opt@homebrew@Cellar@abseil@20240722.1@include@absl@algorithm@algorithm.h.blob  @opt@homebrew@Cellar@abseil@20240722.1@include@absl@algorithm@container.h.blob  @opt@homebrew@Cellar@abseil@20240722.1@include@absl@base@attributes.h.blob  @opt@homebrew@Cellar@abseil@20240722.1@include@absl@base@call_once.h.blob  @opt@homebrew@Cellar@abseil@20240722.1@include@absl@base@casts.h.blob  @opt@homebrew@Cellar@abseil@20240722.1@include@absl@base@config.h.blob  @opt@homebrew@Cellar@abseil@20240722.1@include@absl@base@const_init.h.blob  @opt@homebrew@Cellar@abseil@20240722.1@include@absl@base@dynamic_annotations.h.blob  @opt@homebrew@Cellar@abseil@20240722.1@include@absl@base@internal@atomic_hook.h.blob  @opt@homebrew@Cellar@abseil@20240722.1@include@absl@base@internal@dynamic_annotations.h.blob  @opt@homebrew@Cellar@abseil@20240722.1@include@absl@base@internal@endian.h.blob  @opt@homebrew@Cellar@abseil@20240722.1@include@absl@base@internal@errno_saver.h.blob  @opt@homebrew@Cellar@abseil@20240722.1@include@absl@base@internal@fast_type_id.h.blob  (+884 more)
example/: main.go
(+1138 files in other folders)
